--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
   <title>Test page for Browser Detection</title>
 </head>
 <body>
-<script type="text/javascript" src="lib/lodash.custom.js"></script>
+<script type="text/javascript" src="lib/lodash.custom.min.js"></script>
 <script type="text/javascript" src="lib/modernizr.custom.35504.js"></script>
 <script type="text/javascript" src="browserTest-min.js"></script>
 <script type="text/javascript">
